workspaces/DC Dev/DC Dev/src/objects/Client__c.object
<CustomObject>
    <description>Holds information about the clients of the organization.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Tells you about the client.</description>
        <inlineHelpText>Enter some description of the client.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Holds the email address of the client.</description>
        <inlineHelpText>Enter the email address of the client.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Holds the mobile number of the point of contact.</description>
        <inlineHelpText>Enter the mobile number of the point of contact.</inlineHelpText>
        <label>Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <description>Person from the client&apos;s end.</description>
        <inlineHelpText>Enter name of the person who is in the deal on client&apos;s behalf.</inlineHelpText>
        <label>Point of Contact</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Client Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>